makes a few minor styling changes to vote totals to stop them from overflowing their column

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,3 +49,7 @@
 h2 {
   text-align: center;
 }
+
+.vote-total {
+  font-size: 2vw
+}
